fix broken overflow on hero images

--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -293,6 +293,8 @@ html[data-current="contact"] main > form {
   color: $color-base-text-negative;
   padding: 12rem 0 10rem 0;
   min-height: 40rem;
+  position: relative;
+  overflow: hidden;
 }
 .center {
   text-align: center;
